[package]
name = "climbsheet"
version = "0.1.0"
edition = "2021"
default-run = "climbsheet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "climbsheet"
path = "src/bin/main.rs"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
google-sheets4 = "4.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"]}
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "process", "io-util"] }
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["cookies","json"] }
base64 = "0.21.0"
rand = "0.8.5"
scraper = "0.14.0"
url = "2.3.1"
sha2 = "0.10.6"
toml = "0.7.2"
secrecy = { version = "0.8.0", features = ["serde"] }
futures = "0.3.26"

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10.45", features = ["vendored"], optional = true }

[features]
vendored-openssl = ["openssl"]
